created v1 MY OWN ULTRA SEXY VERSION of High-Drop-Nav

--- a/High-Drop-Nav.html
+++ b/High-Drop-Nav.html
@@ -8,42 +8,47 @@
      <title>High-Drop-Nav</title>
 </head>
 <body>
+<!-- **********************************
+.                     NAVIGATION
+************************************ -->
      <nav>
           <ul>
-               <li>HOME</li>
-               <li>GALLERY</li>
-               <li>SERVICES</li>
-               <li>TEAM</li>
-               <li>LOCATION</li>
+               <li>AlvenMOOR</li>
+               <li>Gothicus</li>
+               <li>Elenor</li>
+               <li>Enchantia</li>
+               <li>SilvenLEAF</li>
           </ul>
      </nav>
-     <div class="container">
-          <h1>HIGH DROP NAV</h1><br>
-          <p>Created by <a href="">SilvenLEAF</a></p>
-          <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed et illum odio expedita totam quod nisi praesentium vitae quia ad possimus voluptatibus quis atque est minus doloribus, voluptatem distinctio excepturi officia delectus. Reprehenderit sapiente, illum! Illum modi quis enim at nobis maxime dolore deserunt eos voluptatibus deleniti fugiat autem aperiam sint laboriosam eveniet repudiandae aliquam ducimus similique sit, animi odit suscipit incidunt. Veniam exercitationem quaerat impedit facere officiis atque fugit voluptatum ipsam quis cumque, nam minus numquam mollitia nobis suscipit expedita dolores, sequi autem sunt maiores magni eius qui at. Suscipit reiciendis dolorum mollitia rem in quia, excepturi ex! Iure!
-          </p>
-          <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed et illum odio expedita totam quod nisi praesentium vitae quia ad possimus voluptatibus quis atque est minus doloribus, voluptatem distinctio excepturi officia delectus. Reprehenderit sapiente, illum! Illum modi quis enim at nobis maxime dolore deserunt eos voluptatibus deleniti fugiat autem aperiam sint laboriosam eveniet repudiandae aliquam ducimus similique sit, animi odit suscipit incidunt. Veniam exercitationem quaerat impedit facere officiis atque fugit voluptatum ipsam quis cumque, nam minus numquam mollitia nobis suscipit expedita dolores, sequi autem sunt maiores magni eius qui at. Suscipit reiciendis dolorum mollitia rem in quia, excepturi ex! Iure!
-          </p>
-          <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed et illum odio expedita totam quod nisi praesentium vitae quia ad possimus voluptatibus quis atque est minus doloribus, voluptatem distinctio excepturi officia delectus. Reprehenderit sapiente, illum! Illum modi quis enim at nobis maxime dolore deserunt eos voluptatibus deleniti fugiat autem aperiam sint laboriosam eveniet repudiandae aliquam ducimus similique sit, animi odit suscipit incidunt. Veniam exercitationem quaerat impedit facere officiis atque fugit voluptatum ipsam quis cumque, nam minus numquam mollitia nobis suscipit expedita dolores, sequi autem sunt maiores magni eius qui at. Suscipit reiciendis dolorum mollitia rem in quia, excepturi ex! Iure!
-          </p>
-          <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed et illum odio expedita totam quod nisi praesentium vitae quia ad possimus voluptatibus quis atque est minus doloribus, voluptatem distinctio excepturi officia delectus. Reprehenderit sapiente, illum! Illum modi quis enim at nobis maxime dolore deserunt eos voluptatibus deleniti fugiat autem aperiam sint laboriosam eveniet repudiandae aliquam ducimus similique sit, animi odit suscipit incidunt. Veniam exercitationem quaerat impedit facere officiis atque fugit voluptatum ipsam quis cumque, nam minus numquam mollitia nobis suscipit expedita dolores, sequi autem sunt maiores magni eius qui at. Suscipit reiciendis dolorum mollitia rem in quia, excepturi ex! Iure!
-          </p>
 
+<!-- ************************************
+.                             CONTAINER
+************************************** -->
+     <div class="container">
+          <h1>Lorem ipsum dolor</h1>
+          <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quo, voluptas deserunt. Repellendus sint architecto, accusantium nesciunt sit officiis dolor eum ipsum impedit itaque, veritatis voluptatibus ex repudiandae illo assumenda ut iusto quos, dolorum deleniti non quibusdam ipsam natus! Labore amet, sint ipsum architecto itaque numquam hic, cum quaerat laborum minus recusandae. Accusantium provident voluptatem assumenda voluptates veritatis iusto harum pariatur, vitae dicta cum in vel recusandae. Ducimus voluptates facilis inventore quibusdam accusantium similique nulla ut aspernatur expedita, sed suscipit quidem itaque aliquid perferendis debitis obcaecati, maxime quisquam dolore amet eligendi iste, quasi magni, voluptatibus repellat. Odit ullam, mollitia sed.
+          </p>
+          <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio cupiditate tenetur culpa error cum maxime provident quaerat alias ab, quos, tempore fugit aliquid repudiandae. Quos nemo facere sunt ducimus! Consequatur consectetur harum in doloremque rerum ad provident vel porro beatae. Repellendus aperiam quod, porro quae consectetur ipsam magnam? Molestiae, dolore optio omnis, iusto maiores laborum natus dolorum nostrum quos soluta culpa placeat necessitatibus repellat? Tenetur magni at eaque nisi architecto, odit voluptatibus nobis voluptate beatae, perspiciatis harum voluptas! Obcaecati doloremque, nobis dolores tempora omnis culpa error quasi ab nostrum necessitatibus at, soluta. Fugit illum nulla temporibus ea, expedita alias itaque!
+          </p>
+          <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus repellendus, eius nisi sequi maxime dignissimos dolor ducimus doloremque odio consectetur reiciendis sapiente quasi, natus voluptas consequatur debitis saepe aliquam, nostrum a! Ut nostrum quam ea vero necessitatibus ipsum ratione voluptas soluta assumenda, est atque, nesciunt tempora, cumque eligendi nulla aperiam, quaerat possimus obcaecati. Laudantium pariatur necessitatibus iure, id, molestias rerum cupiditate architecto eligendi vitae asperiores sint earum nobis, obcaecati quia modi aliquid voluptate dolor consectetur error recusandae repellat delectus blanditiis. Iusto modi sunt minima provident, magnam nesciunt sint quia numquam tempora fugiat amet voluptate eaque consequatur nihil rem non omnis.
+          </p>
+          <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis labore provident eveniet, assumenda autem similique, mollitia optio a dolore ut nulla? Autem consectetur dolores delectus, consequuntur accusamus modi, doloribus nobis nihil rem tenetur facere maxime nostrum dolorum, reprehenderit non necessitatibus illo pariatur laudantium, quo repellat porro enim ex veritatis. Tempora quam architecto, illum perferendis natus inventore modi nemo quis exercitationem molestias quasi dignissimos repellat? Harum suscipit, fugiat quaerat nesciunt perspiciatis alias deserunt accusantium voluptatem quo, tenetur adipisci doloremque recusandae qui porro neque consectetur ex voluptates natus temporibus. Quisquam hic modi perspiciatis animi libero sunt, deserunt porro error obcaecati, minima earum.
+          </p>
+          <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorem molestiae ducimus quidem sit assumenda sequi quos, explicabo illum tempora maiores reiciendis dolore voluptates dignissimos similique ut omnis eligendi accusantium illo vitae, beatae rerum suscipit fugit quibusdam. Dignissimos eveniet, beatae praesentium? Ad placeat accusantium accusamus quis nemo, sit provident mollitia eos quae! Quam et totam eveniet obcaecati, quos deserunt delectus ipsam ratione veniam accusamus eligendi ipsum nam officiis iure tempore consequuntur iusto. Nesciunt fugiat, est neque cupiditate. Omnis pariatur corrupti illum, perferendis facere molestias ullam magnam fugiat velit eum temporibus aliquid amet nesciunt alias ipsum nobis asperiores et deserunt iste!
+          </p>
      </div>
+<!-- ---------------------HAMBURGER -->
      <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
+          <div></div>
      </div>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" charset="utf-8"></script>
-
      <script type="text/javascript">
-
      $(".hamburger").click(function(){
           $("nav").toggleClass("active")
      });
