created the HTML

--- a/3D-Nav.html
+++ b/3D-Nav.html
@@ -8,5 +8,30 @@
      <title>3D-Nav</title>
 </head>
 <body>
+     <nav class="menu-activea">
+          <h1>NAVBAR</h1>
+          <ul>
+               <li>HOME</li>
+               <li>SETTINGS</li>
+               <li>SERVICES</li>
+               <li>HELP</li>
+               <li>ABOUT US</li>
+               <li>CONTACT US</li>
+               <li>BUG REPORT</li>
+          </ul>
+     </nav>
+     <main>
+          <section>
+               <br><br><br>
+               <h1>&larr; 3D-NAV THAT I LOVE</h1>
+               <br>
+               <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis aspernatur quam labore sapiente recusandae quibusdam expedita magni doloribus porro, totam provident molestias est cupiditate obcaecati perspiciatis beatae, optio quisquam nam unde cumque saepe vitae iusto eum modi architecto. Consequuntur dolore quam commodi odio, soluta, sapiente molestiae fugiat nobis modi quae laborum architecto qui, non ad, tempora consectetur. Assumenda voluptas mollitia optio quos voluptatum eaque qui temporibus asperiores quas obcaecati ut fuga nulla debitis, excepturi facere, nostrum distinctio quibusdam similique. A fuga sapiente itaque, quos quis suscipit aspernatur iusto aut maiores? Voluptatum nemo aspernatur dolores eos, quo odio rerum illum dolorem.
+               </p>
+               <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum officiis nostrum doloribus accusantium. Ipsam reiciendis corporis tenetur veritatis sapiente sit dolore doloribus explicabo unde, dolor temporibus ex quo animi, illum autem odit asperiores consectetur aspernatur incidunt ipsum delectus adipisci aperiam. Aut iusto adipisci nesciunt fugit accusamus. Nihil minima laudantium vero atque necessitatibus doloremque veritatis ut aut eos dolor saepe, iste inventore esse velit dolorem totam, fuga facilis. Nemo rem et, dolore consequuntur laudantium totam veritatis vitae eius molestias porro nulla vel earum minus, voluptatibus ad in fugit amet quaerat corporis sequi accusantium repellendus error voluptas consectetur facilis. Dicta, saepe quisquam.
+               </p>
+          </section>
+     </main>
 </body>
 </html>
