Added JQUERY from CDN

--- a/3D-Nav.html
+++ b/3D-Nav.html
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="3D-Nav.css">
+     <script src="https://code.jquery.com/jquery-3.4.1.js" charset="utf-8"></script>
      <title>3D-Nav</title>
 </head>
 <body>
