removed JQUERY and replaced with CHECKBOX

--- a/3D-NAV/3D-Nav.html
+++ b/3D-NAV/3D-Nav.html
@@ -5,12 +5,13 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="3D-Nav.css">
+     <link rel="stylesheet" href="Menu.css">
      <script src="https://code.jquery.com/jquery-3.4.1.js" charset="utf-8"></script>
      <title>3D-Nav</title>
 </head>
 <body>
-     <nav class="menu-activea">
-          <h1>NAVBAR</h1>
+     <input type="checkbox" class="checkbox">
+     <nav>
           <ul>
                <li>HOME</li>
                <li>SETTINGS</li>
@@ -34,38 +35,5 @@
                </p>
           </section>
      </main>
-
-
-     <script type="text/javascript">
-
-     (function(){
-          var nav= $('nav'),
-               menu=$('nav h1'),
-               main=$('main'),
-               open=false,
-               hover=false;
-
-          menu.on('click', function(){
-               opan= !open ? true : false;
-               nav.toggleClass('menu-active');
-               main.toggleClass('menu-active');
-               nav.removeClass('menu-hover');
-               main.removeClass('menu-hover');
-               console.log(open);
-          });
-
-          menu.hover(
-               function(){
-                    if(!open){
-                         nav.addClass('menu-hover');
-                         main.addClass('menu-hover');
-                    }
-               }, function(){
-                    nav.removeClass('menu-hover');
-                    main.removeClass('menu-hover');
-               }
-          );
-     })();
-     </script>
 </body>
 </html>
